# robocup-fshare

./: .gitignore  CMakeLists.txt  README.md
fshare-rust/: Cargo.toml
fshare-rust/src/: control_message.rs  control_test_message.rs  imu_test_message.rs  kicker_program_message.rs  kicker_testing.rs  lib.rs  radio_addresses.rs  radio_benchmarks.rs  robot_status_message.rs
include/rc-fshare/: git_version.hpp  network_config.hpp  pid.hpp  robot_model.hpp  rtp.hpp
include/rc-fshare/rtp/: Cargo.toml
include/rc-fshare/rtp/src/: control_command.rs  control_message.rs  lib.rs  radio_addresses.rs  robot_status_message.rs
pid/: CMakeLists.txt
pid/include/pid/: pid.hpp
pid/src/: pid.cpp  pid_tuner.cpp
src/: pid.cpp  pid_tuner.cpp  robot_model.cpp
test/: git_version_test.cpp
