[package]
name = "robojackets-robocup-rtp"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Communication Messages for RoboJackets Robocup"
authors = ["Nathaniel Wert <n8.wert.b@gmail.com>"]

[dependencies]

[dependencies.ncomm-utils]
version = "1.0.0"
default-features = false
features = ["nostd"]

[dependencies.nalgebra]
version = "0.33.0"
default-features = false
features = ["libm", "nalgebra-macros"]

[features]
default = []
