[package]
name = "robojackets-robocup-rtp"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Communication Messages for RoboJackets Robocup"
authors = ["Nathaniel Wert <n8.wert.b@gmail.com>"]

[dependencies]

[dependencies.packed_struct]
version = "0.10.1"
default-features = false

[features]
default = ["nostd"]
std = ["packed_struct/std"]
nostd = ["packed_struct/alloc"]