[package]
name = "robojackets-robocup-rtp"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Communication Messages for RoboJackets Robocup"
authors = ["Nathaniel Wert <n8.wert.b@gmail.com>"]

[dependencies]

[dependencies.nalgebra]
version = "0.32.3"
default-features = false
features = ["libm", "nalgebra-macros", "alloc"]

[features]
default = []
yellow-team = []
blue-team = []
